*jbox-gitolite-1.1.11 (19 Apr 2014)

  19 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +jbox-gitolite-1.1.11.ebuild,
  +metadata.xml:
  [dev-ruby/jbox-gitolite] Initial version.