@@ -1,3 +1,8 @@
+*jbox-gitolite-1.2.2 (30 May 2014)
+
+  30 May 2014; Manuel Rüger <mrueg@gentoo.org> +jbox-gitolite-1.2.2.ebuild:
+  [dev-ruby/jbox-gitolite] Version bump.
+
 *jbox-gitolite-1.1.11 (19 Apr 2014)
 
   19 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +jbox-gitolite-1.1.11.ebuild,
